Update backend dockerfile to execute tests in the build process